@@ -7,3 +7,4 @@
 ## Bugfixes
 
 - make progressbar a bit larger -- kaneryu on 2025-03-12
+- add some things to cleanup -- kaneryu on 2025-03-14
