@@ -4,5 +4,6 @@ def addCleanup(func, *args, **kwargs):
     cleanup[func] = (args, kwargs)
 
 def runCleanup():
+    print("Running cleanup")
     for func, (args, kwargs) in cleanup.items():
         func(*args, **kwargs)
