@@ -1,1 +1,1 @@
-0.29.1
+0.29.2
