@@ -7,6 +7,7 @@
 ## Bugfixes
 
 - make progressbar a bit larger -- kaneryu on 2025-03-12
+- add some things to cleanup -- kaneryu on 2025-03-14
 
 
 
